--- a/empresa.html
+++ b/empresa.html
@@ -20,6 +20,20 @@
 <body>
     <!-- Navbar -->
     <header class="fixed-top topbar-hide" id="navbar">
+        <section class="bg-baixeApp hide">
+            <div class="container">
+                <div class="row pt-1 pb-2">
+                        <div class="col-8 d-flex">
+                            <p class="text-center my-auto mx-auto">Baixe agora o aplicativo</p>
+                        </div>
+                        <div class="col-4 d-flex">
+                            <a class="btn btn-danger btn-baixarApp mx-auto" role="button" type="btn">
+                                Baixar
+                            </a>
+                        </div>
+                </div>
+            </div>
+        </section>
         <div class="bg_navbar">
             <div class="container p-0">
                 <nav class="navbar navbar-expand-xl navbar-light" role="navigation">
@@ -106,7 +120,7 @@
     </section>
 
     <section>
-        <div class="container bg-empresa1">
+        <div class="container bg-empresa">
             <div class="row">
                 <div class="col-xl-5 col-12 mx-auto position-relative">
                     <picture class="d-flex justify-content-center py-md-4">
@@ -116,7 +130,7 @@
                     <div class="bg-circulo-vermelhos rounded-circle behind absolute d-none d-xl-flex" style="
                     transform: translate(150px, -200px);"></div>
                 </div>
-                <div class="col-xl-7 col-12">
+                <div class="col-xl-7 col-12 my-auto">
                     <h2>
                         Anuncie sua carga 
                     </h2>
@@ -129,14 +143,14 @@
             </div>
         </div>
 
-        <div class="container bg-empresa2">
+        <div class="container bg-empresa">
             <div class="row">
                 <div class="col-xl-5 col-12 d-xl-none d-block position-relative">
                     <picture class="d-xl-none d-flex justify-content-center py-md-2">
                         <img src="img/empresa-celular.png" alt="Van vermelha" class="img-fluid">
                     </picture>
                 </div>
-                <div class="col-xl-7 col-12">
+                <div class="col-xl-7 col-12 my-auto">
                     <h2>
                         Cuide do seu frete do início ao fim! 
                     </h2>
@@ -156,7 +170,7 @@
             </div>
         </div>
 
-        <div class="container bg-empresa3">
+        <div class="container bg-empresa">
             <div class="row">
                 <div class="col-xl-5 col-12">
                     <picture class="d-flex justify-content-center py-md-4">
@@ -165,7 +179,7 @@
                     <div class="bg-circulo-vermelhos rounded-circle behind absolute d-none d-xl-flex"
                         style="transform: translate(80px, -200px);"></div>
                 </div>
-                <div class="col-xl-7 col-12">
+                <div class="col-xl-7 col-12 my-auto">
                     <h2>
                         Sem intermediação!
                     </h2>
