little dropdown fix

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                                         Entrar
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownEntrar">
-                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou
+                                        <li><a href="entrar-empresa.html" class="dropdown-item"  role="navigation" type="button">Sou
                                                 Empresa</a></li>
-                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou
+                                        <li><a href="entrar-motorista.html" class="dropdown-item"  role="navigation" type="button">Sou
                                                 Motorista</a></li>
                                         <div class="horizontal-bar"></div>
                                         <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar"
