--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                     <div class="col-xl-6 col-sm-12">
                         <div class="col-12 justify-xl-content-start justify-content-center d-flex">
-                            <div class="card sombra-caixa" id="comoFunciona-card1">
+                            <div class="card" id="comoFunciona-card1">
                                 <div class="row">
                                     <div class="col-4 position-relative mx-auto">
                                         <img src="img/homem-carrinhoDeMao.png" alt="Homem carregando um caminhão de mão"
@@ -174,7 +174,7 @@
                                 style="transform: translate(-230px, -30px)"></div> -->
                         </div>
                         <div class="col-12 justify-xl-content-start justify-content-center d-flex">
-                            <div class="card sombra-caixa" id="comoFunciona-card2">
+                            <div class="card" id="comoFunciona-card2">
                                 <div class="row">
                                     <div class="col-4">
                                         <img src="img/caminhao-vermelho.png" alt="Caminhão vermelho" class="img-fluid">
@@ -195,7 +195,7 @@
                             </div>
                         </div>
                         <div class="col-12 justify-xl-content-start justify-content-center d-flex">
-                            <div class="card sombra-caixa" id="comoFunciona-card3">
+                            <div class="card" id="comoFunciona-card3">
                                 <div class="row">
                                     <div class="col-4">
                                         <img src="img/handshake-vermelho.png" alt="Duas mãos fazendo um acordo"
