add comments to html

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                         </button>
                     </li>
                 </ul>
-                <a href="index.html" class="topbar__logo--mobile" id="topbar__logo__mobile" title="Guia do Transporte"></a>
+                <a href="index.html" class="topbar__logo--mobile" id="topbar__logo__mobile"
+                    title="Guia do Transporte"></a>
             </div>
         </nav>
 
@@ -163,8 +164,8 @@
                                     <label for="origin" class="position-absolute quotation__form__label">
                                         Origem da sua carga
                                     </label>
-                                    <input type="text" id="origin-top" name="origin" class="w-100 quotation__form__input"
-                                        required aria-required="true"
+                                    <input type="text" id="origin-top" name="origin"
+                                        class="w-100 quotation__form__input" required aria-required="true"
                                         onkeyup="onChangeText(this, 'quotation__form__input__origin')"
                                         onfocus="onFocus('quotation__form__input__origin')"
                                         onblur="onBlur('quotation__form__input__origin')">
@@ -183,8 +184,8 @@
                                     <label for="destination" class="position-absolute quotation__form__label">
                                         Destino da sua carga
                                     </label>
-                                    <input type="text" id="destination-top" name="destination" class="w-100 quotation__form__input"
-                                        required aria-required="true"
+                                    <input type="text" id="destination-top" name="destination"
+                                        class="w-100 quotation__form__input" required aria-required="true"
                                         onkeyup="onChangeText(this, 'quotation__form__input__destination')"
                                         onfocus="onFocus('quotation__form__input__destination')"
                                         onblur="onBlur('quotation__form__input__destination')">
@@ -229,8 +230,9 @@
                                 <label for="origin" class="position-absolute quotation__form__label">
                                     Origem da sua carga
                                 </label>
-                                <input type="text" id="origin" name="origin" class="w-100 quotation__form__input" required
-                                    aria-required="true" onkeyup="onChangeText(this, 'quotation__form__input__origin')"
+                                <input type="text" id="origin" name="origin" class="w-100 quotation__form__input"
+                                    required aria-required="true"
+                                    onkeyup="onChangeText(this, 'quotation__form__input__origin')"
                                     onfocus="onFocus('quotation__form__input__origin')"
                                     onblur="onBlur('quotation__form__input__origin')">
                             </div>
@@ -248,8 +250,9 @@
                                 <label for="destination" class="position-absolute quotation__form__label">
                                     Destino da sua carga
                                 </label>
-                                <input type="text" id="destination" name="destination" class="w-100 quotation__form__input" required
-                                    aria-required="true" onkeyup="onChangeText(this, 'quotation__form__input__destination')"
+                                <input type="text" id="destination" name="destination"
+                                    class="w-100 quotation__form__input" required aria-required="true"
+                                    onkeyup="onChangeText(this, 'quotation__form__input__destination')"
                                     onfocus="onFocus('quotation__form__input__destination')"
                                     onblur="onBlur('quotation__form__input__destination')">
                             </div>
@@ -273,7 +276,8 @@
                     Fácil de Usar
                 </h2>
                 <h3 class="explanation__subtitle col-12">
-                    Procure a transportadora pela rota e faça cotação online sem precisar se cadastrar. Nunca foi tão fácil
+                    Procure a transportadora pela rota e faça cotação online sem precisar se cadastrar. Nunca foi tão
+                    fácil
                     fazer sua cotação com a transportadora certa!
                 </h3>
                 <div class="explanation__card col-md-4 col-12">
@@ -942,6 +946,8 @@
                 </div>
             </ul>
         </section>
+
+        <!-- Aplicativo Mobile -->
         <section class="app container-fluid">
             <div class="container position-relative">
                 <div class="row">
@@ -965,7 +971,8 @@
                                     </h2>
                                     <p class="app__subtitle">
                                         Faça sua cotação online e receba as respostas diretamente em seu <a href="#"
-                                            target="_blank" class="app__subtitle--green"><strong>WhatsApp</strong></a> de
+                                            target="_blank" class="app__subtitle--green"><strong>WhatsApp</strong></a>
+                                        de
                                         forma simples e
                                         rápida
                                     </p>
@@ -984,6 +991,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Blog -->
         <section class="blog container">
             <div class="row">
                 <div class="col-12">
@@ -1050,6 +1059,8 @@
                 </article>
             </div>
         </section>
+
+        <!-- Estatisticas -->
         <section class="statistics container-fluid">
             <div class="container">
                 <div class="row">
@@ -1098,7 +1109,10 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
+
+        <!-- Links úteis do Footer(navegação) -->
         <section class="footer container-fluid">
             <div class="container">
                 <div class="row">
@@ -1138,13 +1152,16 @@
                 </div>
             </div>
         </section>
+
+        <!-- Direitos Autorais e Onde Estamos -->
         <section class="footer--2 container-fluid">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <div class="footer--2__group">
                             <div class="footer--2__text">
-                                ©2021 <a href="index.html" class="footer--2__text--grey">Guia do Transporte</a> - 29.497.833/0001-91.
+                                ©2021 <a href="index.html" class="footer--2__text--grey">Guia do Transporte</a> -
+                                29.497.833/0001-91.
                             </div>
                             <div class="footer--2__text">
                                 Todos os direitos reservados.
@@ -1164,9 +1181,16 @@
         </section>
     </footer>
 
+    <!-- Importar Jquery -->
     <script src="js/jquery-min.js"></script>
+
+    <!-- Importar Bootstrap -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Importar Jquery Counterup Plugin -->
     <script src="js/jquery.counterup.min.js"></script>
+
+    <!-- Importar meu arquivo Javascript -->
     <script src="js/my.js"></script>
 </body>
 
